Bug 142393 - CRASH: Clicking on filter by color dropdownlist (gen)
Summary: CRASH: Clicking on filter by color dropdownlist (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: AutoFilter AutoFilter-Color
  Show dependency treegraph
 
Reported: 2021-05-20 10:47 UTC by Xisco Faulí
Modified: 2021-09-11 13:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (10.46 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-05-20 10:47 UTC, Xisco Faulí
Details
bt with debug symbols (3.30 KB, text/plain)
2021-05-20 14:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-05-20 10:47:25 UTC
Created attachment 172194 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Click on A1 autofilter
3. Click on 'Background color' and do not release the mouse button
4. While you hold the mouse button clicked, move the mouse somewhere else and release

-> Crash

Reproduced in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 4e4e02904fdff021631e7758a277b7c1c7b9378a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-05-20 10:48:36 UTC
Crash introduced in

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5a4bd9bfbdb881368c202bc766f893a5c672621e

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2021-04-21 09:53:54 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2021-05-03 09:32:17 +0200
commit 5a4bd9bfbdb881368c202bc766f893a5c672621e (patch)
tree d3f37369f5085e1f343ebb38c2ed13cd9ed8cc72
parent 95d8eb87eb20351a2e5795fc8c16653c0f58d6b4 (diff)
tdf#76258 Filter by colors

Bisected with: bibisect-linux64-7.2

Adding Cc: to Samuel Mehrbrodt
Comment 2 Julien Nabet 2021-05-20 14:59:37 UTC
Created attachment 172210 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + gen rendering, I could reproduce the crash.
Comment 3 Samuel Mehrbrodt 2021-05-21 06:06:14 UTC
This looks like a general problem in the vcl backend, probably only accidentally triggered by my code.

@Caolan, any idea what could be the problem here?
Comment 4 Xisco Faulí 2021-06-01 08:39:52 UTC
*** Bug 142420 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2021-06-14 14:13:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c0938c9bb63fa65ea44439b4e838ed0d9fa1260

tdf#142393 crash on filter by color dropdownlist (gen)

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-06-14 18:07:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/04fc015bbf14b0b3807678cf4d63a7852508ced1

tdf#142393 crash on filter by color dropdownlist (gen)

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2021-08-10 09:51:33 UTC
Verified in

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 6e53e03f752c2f85283c4d47efaaf0683299783c
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!
Comment 8 Mehmet gelisin 2021-09-11 13:03:57 UTC Comment hidden (spam)