tdf#142393 crash on filter by color dropdownlist (gen)

the frame/window can become disposed during the early stages of this
method

Change-Id: I974cbeefa75a3b5274e397a6da70db8b7cf73528
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117157
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 3c0938c9bb63fa65ea44439b4e838ed0d9fa1260)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117124
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>